--- a/FinalFtp/app/build.gradle
+++ b/FinalFtp/app/build.gradle
@@ -19,7 +19,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
             //根据需要 自行选择添加的对应cpu类型的.so库。
-            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a','x86', 'x86_64'
             // 还可以添加 'x86', 'x86_64', 'mips', 'mips64'
         }
         manifestPlaceholders = [
@@ -57,8 +57,8 @@ dependencies {
     implementation 'com.qmuiteam:qmui:1.1.12'
     implementation 'com.github.GrenderG:Toasty:1.3.1'
     //信鸽普通版本jar，不包含厂商通道
-    implementation 'com.tencent.xinge:xinge:4.0.5-release'
-    //compile'com.tencent.xinge:xinge:4.3.0-beta'
+    //implementation 'com.tencent.xinge:xinge:4.0.5-release'
+    implementation'com.tencent.xinge:xinge:4.3.0-beta'
     //信鸽及动态加载厂商通道jar(此版本已经集成厂商通道，无需依赖其它三个厂商依赖)
     //implementation 'com.tencent.xinge:xinge:4.3.0-xgotherpush-beta'
     //jg包
