--- a/FinalFtp/app/build.gradle
+++ b/FinalFtp/app/build.gradle
@@ -5,7 +5,7 @@ android {
         release {
             keyAlias 'gljkey'
             keyPassword '23691159a'
-            storeFile file('C:/Users/glj23/Desktop/key.jks')
+            storeFile file('C:/Users/glj23/Desktop/开发工具/key.jks')
             storePassword '23691159a'
         }
     }
@@ -58,7 +58,7 @@ dependencies {
     implementation 'com.github.GrenderG:Toasty:1.3.1'
     //信鸽普通版本jar，不包含厂商通道
     //implementation 'com.tencent.xinge:xinge:4.0.5-release'
-    implementation'com.tencent.xinge:xinge:4.3.0-beta'
+    implementation 'com.tencent.xinge:xinge:4.3.0-beta'
     //信鸽及动态加载厂商通道jar(此版本已经集成厂商通道，无需依赖其它三个厂商依赖)
     //implementation 'com.tencent.xinge:xinge:4.3.0-xgotherpush-beta'
     //jg包
